--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   <link rel="shortcut icon" type="image/png" href="https://f2.toyhou.se/file/f2-toyhou-se/images/44232760_l8o5CwCY1OajClL.png"/>
 
   <!-- Title of your site -->
-  <title>Cybirbs Dex</title>
+  <title>Nyandroids Masterlist</title>
 
   <!-- Description of your site -->
-  <meta name="description" content="An automated masterlist for Planet Celestae species!">
+  <meta name="description" content="An automated masterlist for Nyandroids species!">
 
 
   <!-- ----------------------------------------------------------------- -->
@@ -56,7 +56,7 @@
     let yourOptions = {
 
       // Sheet Information
-      sheetID: "1e1-0P9Xdh1dF0ncIj6XoeWnPfbx8ggZx_qQke2lZu9E",
+      sheetID: "1jMcIgCtVTaT8Y7DxQAaG1oyQ-tARD44W2fPbQPNvFfI",
       sheetPage: "Public Masterlist",
 
       // Amount of items shown on the page. Default is 12.
