--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <div class="container">
 
       <!-- Brand -->
-      <a class="navbar-brand" href="#"><i class="bi bi-box2-heart"></i> Cybirbs</a>
+      <a class="navbar-brand" href="#"><i class="bi bi-box2-heart"></i> Nyandroids</a>
 
       <!-- Toggle -->
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#charadexnav">
@@ -94,18 +94,18 @@
       <div class="collapse navbar-collapse" id="charadexnav">
         <ul class="navbar-nav mr-auto">
 
-          <li class="nav-item"><a class="nav-link" href="https://bubblebirbspecies-tos.carrd.co/">Species TOS</a></li>
-          <li class="nav-item"><a class="nav-link" href="https://toyhou.se/CybirbsOfficial">Toyhouse ML</a></li>
+          <li class="nav-item"><a class="nav-link" href="https://toyhou.se/~world/120275.nyandroids/page/71036.tos">TOS</a></li>
+          <li class="nav-item"><a class="nav-link" href="https://toyhou.se/Nyandroids">Species Info</a></li>
 
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" data-toggle="dropdown">
-              Species Sites
+              Websites
             </a>
             <div class="dropdown-menu">
-              <a class="dropdown-item" href="https://sites.google.com/view/cybirbs">Cybirbs</a>
+              <a class="dropdown-item" href="https://toyhou.se/~world/120275.nyandroids">TH world</a>
               <!-- a class="dropdown-item" href="#">FloralFluff</a -->
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="https://discord.com/invite/727VBnFJGT">Discord Server</a>
+              <a class="dropdown-item" href="https://discord.gg/9AyZtt5frB">Discord</a>
             </div>
           </li>
 
@@ -210,7 +210,7 @@
   <-- Please do not remove the credit
   <-------------------------------------------------------------------- -->
   <div class="footer bg-dark p-md-5 p-4 text-center">
-    <p><a class="text-reset" href="https://toyhou.se/BubbleBirb">Cybirbs © BubbleBirb</a></p>
+    <p><a class="text-reset" href="https://toyhou.se/ShadowKitty15">Nyandroids © ShadowKitty15</a></p>
     <p><a href="https://github.com/cheeriko/charadex">Powered by Charadex</a></p>
   </div>
 
