--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- ----------------------------------------------------------------- -->
 
   <!-- Website's icon in the browser -->
-  <link rel="shortcut icon" type="image/png" href="https://f2.toyhou.se/file/f2-toyhou-se/images/44232760_l8o5CwCY1OajClL.png"/>
+  <link rel="shortcut icon" type="image/png" href=""/>
 
   <!-- Title of your site -->
   <title>Nyandroids Masterlist</title>
