--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- ----------------------------------------------------------------- -->
 
   <!-- Website's icon in the browser -->
-  <link rel="shortcut icon" type="image/png" href=""/>
+  <link rel="shortcut icon" type="image/png" href="https://f2.toyhou.se/file/f2-toyhou-se/characters/18752517?1667885266"/>
 
   <!-- Title of your site -->
   <title>Nyandroids Masterlist</title>
