--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
       // Sheet Information
       sheetID: "1jMcIgCtVTaT8Y7DxQAaG1oyQ-tARD44W2fPbQPNvFfI",
-      sheetPage: "Masterlist Log",
+      sheetPage: "Public Masterlist",
 
       // Amount of items shown on the page. Default is 12.
       itemAmount: 12,
