--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   <link rel="shortcut icon" type="image/png" href="https://f2.toyhou.se/file/f2-toyhou-se/characters/18752517?1667885266"/>
 
   <!-- Title of your site -->
-  <title>Nyandroids Masterlist</title>
+  <title>I-dollz Masterlist</title>
 
   <!-- Description of your site -->
-  <meta name="description" content="An automated masterlist for Nyandroids species!">
+  <meta name="description" content="An automated masterlist for I-dollz species!">
 
 
   <!-- ----------------------------------------------------------------- -->
@@ -56,7 +56,7 @@
     let yourOptions = {
 
       // Sheet Information
-      sheetID: "1jMcIgCtVTaT8Y7DxQAaG1oyQ-tARD44W2fPbQPNvFfI",
+      sheetID: "1WAYQSIQ5mFP95lYdnw6fh49YxNqDNBMeRt0r8q9iyNM",
       sheetPage: "Public Masterlist",
 
       // Amount of items shown on the page. Default is 12.
@@ -83,7 +83,7 @@
     <div class="container">
 
       <!-- Brand -->
-      <a class="navbar-brand" href="#"><i class="bi bi-box2-heart"></i>Nyandroids</a>
+      <a class="navbar-brand" href="#"><i class="bi bi-box2-heart"></i>I-dollz</a>
 
       <!-- Toggle -->
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#charadexnav">
@@ -94,18 +94,18 @@
       <div class="collapse navbar-collapse" id="charadexnav">
         <ul class="navbar-nav mr-auto">
 
-          <li class="nav-item"><a class="nav-link" href="https://toyhou.se/~world/120275.nyandroids/page/71036.tos">TOS</a></li>
-          <li class="nav-item"><a class="nav-link" href="https://toyhou.se/Nyandroids">Species Info</a></li>
+          <li class="nav-item"><a class="nav-link" href="https://toyhou.se/~world/135006.i-dollz-lounge/page/79671.tos">TOS</a></li>
+          <li class="nav-item"><a class="nav-link" href="https://toyhou.se/~world/135006.i-dollz-lounge">Species Info</a></li>
 
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" data-toggle="dropdown">
               Websites
             </a>
             <div class="dropdown-menu">
-              <a class="dropdown-item" href="https://toyhou.se/~world/120275.nyandroids">TH world</a>
+              <a class="dropdown-item" href="https://toyhou.se/~world/135006.i-dollz-lounge">TH world</a>
               <!-- a class="dropdown-item" href="#">FloralFluff</a -->
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="https://discord.gg/9AyZtt5frB">Discord</a>
+              <a class="dropdown-item" href="https://discord.gg/BqKedrFNGm">Discord</a>
             </div>
           </li>
 
@@ -210,7 +210,7 @@
   <-- Please do not remove the credit
   <-------------------------------------------------------------------- -->
   <div class="footer bg-dark p-md-5 p-4 text-center">
-    <p><a class="text-reset" href="https://toyhou.se/ShadowKitty15">Nyandroids © ShadowKitty15</a></p>
+    <p><a class="text-reset" href="https://toyhou.se/ShadowKitty15">I-dollz © ShadowKitty15</a></p>
     <p><a href="https://github.com/cheeriko/charadex">Powered by Charadex</a></p>
   </div>
 
